<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.learnenglish.MainActivity">

    <TextView
        android:id="@+id/salutations_and_replies"
        style="@style/CategoryStyle"
        android:background="@color/category_salutations_and_replies"
        android:text="@string/category_salutations_and_replies" />

    <TextView
        android:id="@+id/numbers"
        style="@style/CategoryStyle"
        android:background="@color/category_numbers"
        android:text="@string/category_numbers" />

    <TextView
        android:id="@+id/body_parts"
        style="@style/CategoryStyle"
        android:background="@color/category_body_parts"
        android:text="@string/category_body_parts" />

    <TextView
        android:id="@+id/animals"
        style="@style/CategoryStyle"
        android:background="@color/category_animals"
        android:text="@string/category_animals" />

    <TextView
        android:id="@+id/family"
        style="@style/CategoryStyle"
        android:background="@color/category_family"
        android:text="@string/category_family" />

    <TextView
        android:id="@+id/phrases"
        style="@style/CategoryStyle"
        android:background="@color/category_phrases"
        android:text="@string/category_phrases" />

</LinearLayout>
</ScrollView>